# SOM

./: 404.html  LICENCE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
SOM-unfinished/: item_numbers.py
UI/: forge.config.js  index.html  main.js  package-lock.json  package.json  parameters.json  preload.js  renderer.js  script.py  style.css
docs/: index.md  license.md
helcom_action/: README.md  export_measure_pressure_CEA.py  (+2 more)
protect_baltic/: LICENCE  README.md  SOM_Launcher.bat  pyproject.toml
protect_baltic/docs/: SOM-app.drawio
protect_baltic/src/: TODO.txt  __main__.py  api_config.toml  api_main.py  api_tools.py  config.toml  configExample.toml  configTestActivityContributions.toml  configTestActivityReductions.toml  configTestDataLoading.toml  main.py  som_app.py  som_plots.py  som_quick.py  som_tools.py  utilities.py
protect_baltic/src/data/: exampleData.xlsx  exampleEffect.xlsx  examplePressureState.xlsx
protect_baltic/src/data/example/: exampleData.xlsx  exampleResults.xlsx
protect_baltic/src/data/testActCont/: testActContResults.xlsx
protect_baltic/src/data/testActRed/: testActRedData.xlsx  testActRedPressureState.xlsx  testActRedResults.xlsx  ~$testActContResults.xlsx
protect_baltic/src/data/testDataLoad/: testDataLoadData.xlsx  testDataLoadMeasureEffect.xlsx  testDataLoadResults.xlsx
protect_baltic/src/helcom_api/: __main__.py  configuration.py  configuration.toml  gis_config.toml  gis_tools.py  sandbox.ipynb
protect_baltic/src/helcom_blues.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
protect_baltic/src/som/: __main__.py  configuration.toml  som_app.py  som_classes.py  som_tools.py
(+95 files in other folders)
