# pyproject.toml

[build-system]
requires = ["setuptools>=61.5"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[project]
name = "helcom_protect_baltic_som"
version = "1.0.0"
description = "A HELCOM Protect Baltic Application"
readme = "README.md"
authors = [{ name="Camilo Hernández", email="camilo.hernandez@helcom.fi" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy >= 1.26",
    "pandas >= 2.2",
    "geopandas >= 0.14", 
    "requests >= 2.31", 
    "toml >= 0.10", 
    "openpyxl >= 3.1", 
    "matplotlib >= 3.10"
]
requires-python = ">=3.12"

[project.urls]
"Homepage" = "https://github.com/helcomsecretariat/SOM"
