# pyproject.toml

[build-system]
requires = ["setuptools>=61.5"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}


[project]
name = "helcom_protect_baltic"
version = "0.0.1"
description = "A Helcom Protect Baltic Application"
readme = "README.md"
authors = [{ name="Antti-Jussi Kieloaho", email="antti-jussi.kieloaho@luke.fi" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy >= 1.21.5",
    "pandas >= 1.4.2",
    "geocube >= 0.3.3", 
    "requests >= 2.31.0"
]
requires-python = ">=3.9"


[project.urls]
"Homepage" = "https://github.com/helcomsecretariat/SOM"